--- a/Resources.qrc
+++ b/Resources.qrc
@@ -3,5 +3,8 @@
         <file>img/WhatsApp Image 2020-05-17 at 07.35.51.jpeg</file>
         <file>img/51303ee1-c6fc-4b5a-9026-271fe2a258f3.jpg</file>
         <file>img/background-ppt-background-2003905.jpg</file>
+        <file>img/document.png</file>
+        <file>img/file.png</file>
+        <file>img/jar-file.png</file>
     </qresource>
 </RCC>
