--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,7 +40,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Select</string>
     </property>
    </widget>
   </widget>
