--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,27 +20,59 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>310</y>
-      <width>268</width>
-      <height>23</height>
+      <x>250</x>
+      <y>500</y>
+      <width>251</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Run</string>
+     <string>Done</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>240</y>
-      <width>75</width>
-      <height>23</height>
+      <x>40</x>
+      <y>340</y>
+      <width>111</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Select</string>
+     <string>Select File</string>
+    </property>
+   </widget>
+   <widget class="QToolButton" name="toolButton">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>190</y>
+      <width>131</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img/img/interface.png);</string>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
+   <widget class="QToolButton" name="toolButton_2">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>140</y>
+      <width>231</width>
+      <height>271</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img/img/1.png);</string>
+    </property>
+    <property name="text">
+     <string> </string>
     </property>
    </widget>
   </widget>
