All except prettifing bug

--- a/Resources.qrc
+++ b/Resources.qrc
@@ -8,5 +8,10 @@
         <file>img/photo-1483401757487-2ced3fa77952.jpg</file>
         <file>img/1.png</file>
         <file>img/2.png</file>
+        <file>img/pencil.png</file>
+        <file>img/file (1).png</file>
+        <file>img/file-type.png</file>
+        <file>img/computer (1).png</file>
+        <file>img/computer.png</file>
     </qresource>
 </RCC>
